# type-theory

./: Box Data Dump.csv  Cargo.toml  README.md  complex_relationships.py  data.py  main.py  pokeapi_api.py  radical_red.txt  relationships.py  single_types.py  smogon_api.py  smogon_files.py  team.txt  test_complex_relationships.py  test_data.py  test_pokeapi_api.py  test_relationships.py  test_smogon_files.py  testing.ipynb  type_chart.py  unbound_pkm.txt
data/: Box Data Dump.csv  pokemon_data_gen5.csv
src/: analysis.rs  injest.rs  lib.rs  main.rs  pokemon.rs  team.rs  typing.rs
src/analysis/: autoscale.rs  average_resistance.rs  checks.rs  complement_cycle.rs  complement_matrix.rs  offensive_coverage.rs  resistance.rs  resistance_connector.rs  scoring.rs  team_opp_matchup.rs  typing.rs
