[package]
name = "type-theory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["derive"] }

[[bin]]
name = "auto-team"
path = "src/bin/auto_team.rs"

[features]
gen6 = []